--- a/apps/frontendcore/src/styles/global.css
+++ b/apps/frontendcore/src/styles/global.css
@@ -1,14 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* You can add global styles to this file, and also import other style files */
-
 /* You can add global styles to this file, and also import other style files */
 
 /* @import url(assets/plugins/font-awesome/css/font-awesome.min.css); */
 /* @import url(assets/plugins/icheck-bootstrap/icheck-bootstrap.min.css); */
-/* @import url(assets/css/adminlte.min.css); */
+@import url(/assets/css/adminlte.min.css);
 /* @import url(assets/css/simple-line-icons/simple-line-icons.css); */
 @import "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic";
 /* @import '~ngx-toastr/toastr'; */
@@ -19,7 +13,7 @@
 /* @import "https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"; */
 /** overlayScrollbars */
 
-/* @import "assets/css/adminlte.min.css"; */
+@import "/assets/css/adminlte.min.css";
 /** Google Font: Source Sans Pro */
 
 .content-wrapper-left {
@@ -916,7 +910,7 @@ table {
   padding: 28px;
   color: #888787f0;
   border-top: 0px solid #dee2e6;
-  background: url(/assets/dist/img/logo_at_unig_itgest.png) #22283a 50% 31% no-repeat padding-box !important;
+  background: url(/assets/img/logo_at_unig_itgest.png) #22283a 50% 31% no-repeat padding-box !important;
   background-size: 9% !important;
 }
 
@@ -1550,4 +1544,10 @@ label:not(.form-check-label):not(.custom-file-label) {
 
 .example-full-width input::after {
   white-space: normal !important;
+}
+
+.small-box>.small-box-footer {
+  padding: 8px 25px !important;
+  font-size: 16px !important;
+  height: 36px;
 }
