feat: Add user list pagination component

--- a/apps/frontendcore/src/styles/styles.css
+++ b/apps/frontendcore/src/styles/styles.css
@@ -16,6 +16,9 @@
 /** overlayScrollbars */
 
 @import '/assets/css/adminlte.min.css';
+
+@import '/assets/css/at.css';
+
 /** Google Font: Source Sans Pro */
 
 .content-wrapper-left {
